bindings/vala/vapi/maplibre-native-c.vapi


    [CCode (cname = "mln_map_pixel_for_lat_lng")]
    public static Status map_pixel_for_lat_lng (Map map, LatLng coordinate, out ScreenPoint out_point);

    [CCode (cname = "mln_map_lat_lng_for_pixel")]
    public static Status map_lat_lng_for_pixel (Map map, ScreenPoint point, out LatLng out_coordinate);

    [CCode (cname = "mln_map_pixels_for_lat_lngs")]
    public static Status map_pixels_for_lat_lngs (Map map, LatLng* coordinates, size_t coordinate_count, ScreenPoint* out_points);

    [CCode (cname = "mln_map_lat_lngs_for_pixels")]
    public static Status map_lat_lngs_for_pixels (Map map, ScreenPoint* points, size_t point_count, LatLng* out_coordinates);

    [CCode (cname = "mln_style_tile_source_options_default")]
    public static StyleTileSourceOptions style_tile_source_options_default ();

    [CCode (cname = "mln_custom_geometry_source_options_default")]
    public static CustomGeometrySourceOptions custom_geometry_source_options_default ();

    [CCode (cname = "mln_premultiplied_rgba8_image_default")]
    public static PremultipliedRgba8Image premultiplied_rgba8_image_default ();

    [CCode (cname = "mln_style_image_options_default")]
    public static StyleImageOptions style_image_options_default ();

    [CCode (cname = "mln_style_image_info_default")]
    public static StyleImageInfo style_image_info_default ();

    [CCode (cname = "mln_style_id_list_count")]
    public static Status style_id_list_count (StyleIdList list, out size_t out_count);

    [CCode (cname = "mln_style_id_list_get")]
    public static Status style_id_list_get (StyleIdList list, size_t index, out StringView out_id);

    [CCode (cname = "mln_style_id_list_destroy")]
    public static void style_id_list_destroy (StyleIdList list);

    [CCode (cname = "mln_map_add_style_source_json")]
    public static Status map_add_style_source_json (Map map, StringView source_id, JsonValue* source_json);

    [CCode (cname = "mln_map_add_geojson_source_url")]
    public static Status map_add_geojson_source_url (Map map, StringView source_id, StringView url);

    [CCode (cname = "mln_map_add_geojson_source_data")]
    public static Status map_add_geojson_source_data (Map map, StringView source_id, GeoJson* data);

    [CCode (cname = "mln_map_set_geojson_source_url")]
    public static Status map_set_geojson_source_url (Map map, StringView source_id, StringView url);

    [CCode (cname = "mln_map_set_geojson_source_data")]
    public static Status map_set_geojson_source_data (Map map, StringView source_id, GeoJson* data);

    [CCode (cname = "mln_map_add_vector_source_url")]
    public static Status map_add_vector_source_url (Map map, StringView source_id, StringView url, StyleTileSourceOptions* options);

    [CCode (cname = "mln_map_add_vector_source_tiles")]
    public static Status map_add_vector_source_tiles (Map map, StringView source_id, StringView* tiles, size_t tile_count, StyleTileSourceOptions* options);

    [CCode (cname = "mln_map_add_raster_source_url")]
    public static Status map_add_raster_source_url (Map map, StringView source_id, StringView url, StyleTileSourceOptions* options);

    [CCode (cname = "mln_map_add_raster_source_tiles")]
    public static Status map_add_raster_source_tiles (Map map, StringView source_id, StringView* tiles, size_t tile_count, StyleTileSourceOptions* options);

    [CCode (cname = "mln_map_add_raster_dem_source_url")]
    public static Status map_add_raster_dem_source_url (Map map, StringView source_id, StringView url, StyleTileSourceOptions* options);

    [CCode (cname = "mln_map_add_raster_dem_source_tiles")]
    public static Status map_add_raster_dem_source_tiles (Map map, StringView source_id, StringView* tiles, size_t tile_count, StyleTileSourceOptions* options);

    [CCode (cname = "mln_map_add_custom_geometry_source")]
    public static Status map_add_custom_geometry_source (Map map, StringView source_id, CustomGeometrySourceOptions* options);

    [CCode (cname = "mln_map_set_custom_geometry_source_tile_data")]
    public static Status map_set_custom_geometry_source_tile_data (Map map, StringView source_id, CanonicalTileId tile_id, GeoJson* data);

    [CCode (cname = "mln_map_invalidate_custom_geometry_source_tile")]
    public static Status map_invalidate_custom_geometry_source_tile (Map map, StringView source_id, CanonicalTileId tile_id);

    [CCode (cname = "mln_map_invalidate_custom_geometry_source_region")]
    public static Status map_invalidate_custom_geometry_source_region (Map map, StringView source_id, LatLngBounds bounds);

    [CCode (cname = "mln_map_remove_style_source")]
    public static Status map_remove_style_source (Map map, StringView source_id, out bool out_removed);

    [CCode (cname = "mln_map_style_source_exists")]
    public static Status map_style_source_exists (Map map, StringView source_id, out bool out_exists);

    [CCode (cname = "mln_map_get_style_source_type")]
    public static Status map_get_style_source_type (Map map, StringView source_id, out uint32 out_source_type, out bool out_found);

    [CCode (cname = "mln_map_get_style_source_info")]
    public static Status map_get_style_source_info (Map map, StringView source_id, StyleSourceInfo* out_info, out bool out_found);

    [CCode (cname = "mln_map_copy_style_source_attribution")]
    public static Status map_copy_style_source_attribution (Map map, StringView source_id, char* out_attribution, size_t attribution_capacity, out size_t out_attribution_size, out bool out_found);

    [CCode (cname = "mln_map_list_style_source_ids")]
    public static Status map_list_style_source_ids (Map map, out StyleIdList out_source_ids);

    [CCode (cname = "mln_map_add_hillshade_layer")]
    public static Status map_add_hillshade_layer (Map map, StringView layer_id, StringView source_id, StringView before_layer_id);

    [CCode (cname = "mln_map_add_color_relief_layer")]
    public static Status map_add_color_relief_layer (Map map, StringView layer_id, StringView source_id, StringView before_layer_id);

    [CCode (cname = "mln_map_add_location_indicator_layer")]
    public static Status map_add_location_indicator_layer (Map map, StringView layer_id, StringView before_layer_id);

    [CCode (cname = "mln_map_set_location_indicator_location")]
    public static Status map_set_location_indicator_location (Map map, StringView layer_id, LatLng coordinate, double altitude);

    [CCode (cname = "mln_map_set_location_indicator_bearing")]
    public static Status map_set_location_indicator_bearing (Map map, StringView layer_id, double bearing);

    [CCode (cname = "mln_map_set_location_indicator_accuracy_radius")]
    public static Status map_set_location_indicator_accuracy_radius (Map map, StringView layer_id, double radius);

    [CCode (cname = "mln_map_set_location_indicator_image_name")]
    public static Status map_set_location_indicator_image_name (Map map, StringView layer_id, uint32 image_kind, StringView image_id);

    [CCode (cname = "mln_map_add_style_layer_json")]
    public static Status map_add_style_layer_json (Map map, JsonValue* layer_json, StringView before_layer_id);

    [CCode (cname = "mln_map_remove_style_layer")]
    public static Status map_remove_style_layer (Map map, StringView layer_id, out bool out_removed);

    [CCode (cname = "mln_map_style_layer_exists")]
    public static Status map_style_layer_exists (Map map, StringView layer_id, out bool out_exists);

    [CCode (cname = "mln_map_get_style_layer_type")]
    public static Status map_get_style_layer_type (Map map, StringView layer_id, out StringView out_layer_type, out bool out_found);

    [CCode (cname = "mln_map_list_style_layer_ids")]
    public static Status map_list_style_layer_ids (Map map, out StyleIdList out_layer_ids);

    [CCode (cname = "mln_map_move_style_layer")]
    public static Status map_move_style_layer (Map map, StringView layer_id, StringView before_layer_id);

    [CCode (cname = "mln_map_get_style_layer_json")]
    public static Status map_get_style_layer_json (Map map, StringView layer_id, out JsonSnapshot out_layer, out bool out_found);

    [CCode (cname = "mln_map_set_style_light_json")]
    public static Status map_set_style_light_json (Map map, JsonValue* light_json);

    [CCode (cname = "mln_map_set_style_light_property")]
    public static Status map_set_style_light_property (Map map, StringView property_name, JsonValue* value);

    [CCode (cname = "mln_map_get_style_light_property")]
    public static Status map_get_style_light_property (Map map, StringView property_name, out JsonSnapshot out_value);

    [CCode (cname = "mln_map_set_layer_property")]
    public static Status map_set_layer_property (Map map, StringView layer_id, StringView property_name, JsonValue* value);

    [CCode (cname = "mln_map_get_layer_property")]
    public static Status map_get_layer_property (Map map, StringView layer_id, StringView property_name, out JsonSnapshot out_value);

    [CCode (cname = "mln_map_set_layer_filter")]
    public static Status map_set_layer_filter (Map map, StringView layer_id, JsonValue* filter);

    [CCode (cname = "mln_map_get_layer_filter")]
    public static Status map_get_layer_filter (Map map, StringView layer_id, out JsonSnapshot out_filter);

    [CCode (cname = "mln_map_set_style_image")]
    public static Status map_set_style_image (Map map, StringView image_id, PremultipliedRgba8Image* image, StyleImageOptions* options);

    [CCode (cname = "mln_map_remove_style_image")]
    public static Status map_remove_style_image (Map map, StringView image_id, out bool out_removed);

    [CCode (cname = "mln_map_style_image_exists")]
    public static Status map_style_image_exists (Map map, StringView image_id, out bool out_exists);

    [CCode (cname = "mln_map_get_style_image_info")]
    public static Status map_get_style_image_info (Map map, StringView image_id, StyleImageInfo* out_info, out bool out_found);

    [CCode (cname = "mln_map_copy_style_image_premultiplied_rgba8")]
    public static Status map_copy_style_image_premultiplied_rgba8 (Map map, StringView image_id, uint8* out_pixels, size_t pixel_capacity, out size_t out_byte_length, out bool out_found);

    [CCode (cname = "mln_map_add_image_source_url")]
    public static Status map_add_image_source_url (Map map, StringView source_id, LatLng* coordinates, size_t coordinate_count, StringView url);

    [CCode (cname = "mln_map_add_image_source_image")]
    public static Status map_add_image_source_image (Map map, StringView source_id, LatLng* coordinates, size_t coordinate_count, PremultipliedRgba8Image* image);

    [CCode (cname = "mln_map_set_image_source_url")]
    public static Status map_set_image_source_url (Map map, StringView source_id, StringView url);

    [CCode (cname = "mln_map_set_image_source_image")]
    public static Status map_set_image_source_image (Map map, StringView source_id, PremultipliedRgba8Image* image);

    [CCode (cname = "mln_map_set_image_source_coordinates")]
    public static Status map_set_image_source_coordinates (Map map, StringView source_id, LatLng* coordinates, size_t coordinate_count);

    [CCode (cname = "mln_map_get_image_source_coordinates")]
    public static Status map_get_image_source_coordinates (Map map, StringView source_id, LatLng* out_coordinates, size_t coordinate_capacity, out size_t out_coordinate_count, out bool out_found);

    [CCode (cname = "mln_rendered_feature_query_options_default")]
    public static RenderedFeatureQueryOptions rendered_feature_query_options_default ();

    [CCode (cname = "mln_source_feature_query_options_default")]
    public static SourceFeatureQueryOptions source_feature_query_options_default ();

    [CCode (cname = "mln_rendered_query_geometry_point")]
    public static RenderedQueryGeometry rendered_query_geometry_point (ScreenPoint point);

    [CCode (cname = "mln_rendered_query_geometry_box")]
    public static RenderedQueryGeometry rendered_query_geometry_box (ScreenBox box);
